# GlassPlotter

./: .gitignore  .gitmodules  CMakeLists.txt  GlassPlotter.pro  README.md  resource.qrc  resource.rc  sourcefiles.pri
GlassCatalog/: README.md
catalogs/: README.md
catalogs/AGF/: HOYA.agf  NIKON-HIKARI.agf  OHARA.AGF  SUMITA.agf
catalogs/XML/: CDGM.xml  CHINA.xml  HIKARI.xml  KODAK.xml  MITSUI.xml  NHG.xml  PILKINGTON.xml
data/: Schott.xlsx
data/catalogs/AGF/: OHARA.AGF
data/catalogs/XML/: CHANCE.xml  CORNFR.xml  CORNING.xml  HERAEUS.xml  NIKON.xml  NSG.xml  OSAKA.xml  SPECIAL.xml  SUMITA.xml  ZEON.xml
data/icon/: GlassPlotterIcon.icns
src/: GlassPlotter.pro  GlassPlotterIcon.icns  about_dialog.cpp  about_dialog.h  about_dialog.ui  aboutdialog.cpp  aboutdialog.h  air.cpp  air.h  catalog_view_form.cpp  catalog_view_form.h  catalog_view_form.ui  catalog_view_setting_dialog.cpp  catalog_view_setting_dialog.h  catalog_view_setting_dialog.ui  catalogviewform.cpp  catalogviewform.h  catalogviewform.ui  curve_fitting_dialog.cpp  curve_fitting_dialog.h  curve_fitting_dialog.ui  curvefittingdialog.cpp  curvefittingdialog.h  curvefittingdialog.ui  dispersion_formula.h  dispersion_plot_form.cpp  dispersion_plot_form.h  dispersion_plot_form.ui  dispersionformula.h  dispersionplotform.cpp  dispersionplotform.h  dispersionplotform.ui  dndt_plot_form.cpp  dndt_plot_form.h  dndt_plot_form.ui  dndtplotform.cpp  dndtplotform.h  dndtplotform.ui  glass.cpp  glass.h  (+66 more)
src/QCustomPlot/: README.md
